# YaadhumNet

./: .gitignore  Dockerfile.client  Dockerfile.client.cpu  Dockerfile.server  LICENSE  Makefile  README.md  docker-compose.test.yml  pyproject.toml  requirements.client.txt  requirements.server.txt
moon_fl/: client_app.py  model.py  server_app.py  task.py
notebooks/: fed_MOON_CNN.ipynb  fed_MOON_ViT.ipynb
src/: client_app.py  model.py
tests/: test_model.py
