[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaadhumnet"
version = "0.1.0"
description = "MOON Federated Learning with Flower"
requires-python = ">=3.11"
dependencies = [
    "flwr==1.12.*",
]

[project.optional-dependencies]
server = [
    "boto3>=1.34.0",
    "mlflow>=2.13.0",
]
client = [
    "timm>=1.0.25",
]
cpu = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["moon_fl"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.flwr.app]
publisher = "yaadhumnet"

[tool.flwr.app.components]
serverapp = "moon_fl.server_app:app"
clientapp = "moon_fl.client_app:app"